updated info for ver 1.2

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,7 +10,7 @@ The master branch versions may differ from the dev branch with a higher version 
 1.2.3 - Fixed FQDN Check output for when dig not installed.
 1.2.1.2 - Fixed a bug in output
 1.2.1.1 - Group check updated to safer method
-1.2 - Cleaned up Output, Added Color for easier readability.
+1.2 - Cleaned up Output, Added Color for easier readability, added perl check
 1.1.2.03 - Added FQDN/Hostname check, Supported OS Check & Modified output for yum group 
 1.1.1 - Removed Auto Fixing Issues and Switched to a Check Only Script, added Version Info into code.
 1.0 - Inital Script, Auto Fixed cPanel Preinstall Issues
