--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ Commit Log: https://github.com/cpmatthew/cPanel-PreInstall-Check/commits/master
 
 The master branch versions may differ from the dev branch with a higher version number as features are added, tested and fixed in development before being applied to the master/production script. For a full list of changes please review the Dev Branch ChangeLog. 
 
+1.2.7.5 - fixed bug in kernel check syntax
 1.2.7.4 - additional changes to hostname check output
 1.2.7.3 - Added additional output/info for fixing hostname/fqdn issues
 1.2.7.2 - Added some additional checks/output to cpanel install check
